--- a/cssSttle.css
+++ b/cssSttle.css
@@ -9,6 +9,7 @@
 body {
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
+  font-size: 16px;
 }
 
 header {
@@ -86,19 +87,16 @@ header {
 }
 
 .left-cont h1 {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 200%;
-  text-align: center;
-  margin-bottom: 30px;
+
 }
+/*
 #por1-span1 {
-  font-size: 100px;
+  font-size: 90px;
   font-weight: 900;
   display: block;
 }
 #por1-span2 {
-  font-size: 70px;
+  font-size: 90px;
   font-weight: 900;
   display: block;
 }
@@ -108,9 +106,28 @@ header {
   display: block;
 }
 #por1-span4 {
-  font-size: 30px;
+  font-size: 60px;
+  font-weight:100;
   display: block;
 }
+*/
+
+#por1-h1{
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 0 100px;
+  font-size: 90px;
+  font-weight: 900;
+  display: block;
+}
+
+#por1-h2 {
+  font-size: 60px;
+  font-weight:100;
+  display: block;
+}
+
 #por1-span5 {
   margin-right: 10px;
   text-transform: uppercase;
@@ -655,7 +672,7 @@ hr {
     display: block;
     width: 100%;
 
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     height: 0px;
     transition: all 0.3s ease-in;
     overflow-y: hidden;
@@ -709,14 +726,14 @@ hr {
   }
   #About-por-img1 {
     position: static;
-    margin: 50px auto 0;
+    margin: 200px auto 0;
   }
 
   .About-portion-right-cont-content {
     width: 100%;
   }
   .About-portion-conatiner-right-cont {
-    margin-top: 50px;
+    margin-top: 150px;
     padding: 10px;
     width: 100%;
   }
@@ -739,6 +756,19 @@ hr {
   #Blog-por-cont2-right-div1 {
     margin: 0 auto 30px;
   }
+
+  #por1-h1{
+
+    font-size: 70px;
+    font-weight: 700;
+
+  }
+
+  #por1-h2 {
+    font-size: 50px;
+
+  }
+
 }
 
 @media screen and (max-width: 566px) {
@@ -793,17 +823,15 @@ hr {
     flex-direction: column;
     flex-wrap: wrap;
   }
-  
-  #insta{
-    align-self: normal;
-  }
-
+#insta{
+  align-self: normal;
+}
   /* header */
   .left-art img,
   .right-art img {
     display: none;
   }
-
+/*
   #por1-span1 {
     font-size: 70px;
   }
@@ -815,13 +843,23 @@ hr {
   }
   #por1-span4 {
     font-size: 20px;
+  }*/
+  #por1-h1{
+
+    font-size: 60px;
+    font-weight: 700;
+
   }
+
+  #por1-h2 {
+    font-size: 40px;
+
+  }
+
   #header-btn {
     transform: scale(0.8);
   }
-  #about-btn {
-    transform: scale(0.8);
-  }
+
   .Services-portion-head #Services-por-span1,
   #About-por-span1,
   .Blog-portion-head #Blog-por-span1,
@@ -914,6 +952,7 @@ hr {
     font-size: large !important;
     font-weight: 700;
   }
+
 }
 
 @media screen and (max-width: 460px) {
@@ -1055,6 +1094,16 @@ hr {
   #About-por-span3 {
     font-size: 16px;
   }
+
+  #por1-h1{
+    font-size: 55px;
+    font-weight: 700;
+  }
+
+  #por1-h2 {
+    font-size: 35px;
+  }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -1101,6 +1150,18 @@ hr {
     height: 130px;
     bottom: 50px;
     right: 300px;
+  }
+
+  #por1-h1{
+
+    font-size: 50px;
+    font-weight: 700;
+    padding: 0px;
+  }
+
+  #por1-h2 {
+    font-size: 30px;
+
   }
 }
 
